--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/bcryptjs": "^2.4.6",
@@ -25,7 +27,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
