--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@auth/prisma-adapter": "^2.8.0",
+    "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
@@ -31,6 +34,7 @@
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
